update texts, projects and fix contact me form inputs display on thin phone viewports

--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
       <div class="container">
         <div class="row-flex">
           <div class="col-flex">
-            <h1>Freelancer and Frontend Web Developer</h1>
+            <h1>Freelancer & Full Stack Web Developer</h1>
             <p class="main-section__p">
-              Hi! I am Fiorella Fiorito, a 19 years old self-taught frontend web developer, 
-              freelancer and video editor. Plus, I am currently studying to become a 
-              full Stackweb developer!
+              Hi! I am Fiorella Fiorito, a 19 years old self-taught full-stack web developer, 
+              freelancer and video editor. Currently, working on personal projects to build an outstanding portfolio!
             </p>
             <a class="btn" href="https://fiofiorito.github.io/cv/" target="_blank">Learn more</a>
           </div>
@@ -97,7 +96,7 @@
             </p>
             <ul class="work-exp__list">
               <li class="work-exp__list-item">Starting date: April, 2023 </li>
-              <li class="work-exp__list-item">Till present</li>
+              <li class="work-exp__list-item">End date: June, 2023</li>
             </ul>
           </div>
           <div class="work-exp__card work-exp__card-3">
@@ -125,7 +124,7 @@
             <h2 class="my-portfolio__h2">My Portfolio</h2>
             <div class="row my-portfolio-grid">
               <div class="col my-portfolio-card">
-                <video class="simon-game-video" id="simon-game-video1" src="/video/game-demo-and-code.mov"></video> 
+                <video class="simon-game-video" id="simon-game-video1" src="/video/game-demo-and-code.mov" loop></video> 
                 <button class="btn" id="play-button">Play</button>
                   <div class="my-portfolio-card__text">
                   <h4 class="my-portfolio__h4">
@@ -177,21 +176,16 @@
                 </div>
               </div>
               <div class="col my-portfolio-card">
-                <video class="simon-game-video" id="simon-game-video2" src="/video/Todolist.mov"></video> 
+                <video class="simon-game-video" id="simon-game-video2" src="/video/Todolist.mov" loop></video> 
                 <button class="btn" id="play-button-2">Play</button>
                   <div class="my-portfolio-card__text">
                   <h4 class="my-portfolio__h4">
-                    <a href="https://fiofiorito.github.io/simon-game/"
+                    <a href="https://github.com/fiofiorito/To-Do-List-capstone-project"
                       >To do List Full-Stack web app</a
                     >
                   </h4>
                   <p class="my-portfolio__p">
-                    Deployed a To-Do list using Render.com, the project idea comes from the
-                    <a
-                      href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
-                      >Full Stack Web Dev</a
-                    >
-                    course
+                    Deployed a To-Do list using Render.com, this is my first personal project after finishing the bootcamp I was doing!
                   </p>
                 </div>
               </div>
